--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <span style="transform:matrix(1,0,0,1,0,0);" class="title">Grace Clavijo</span>
                 </h1>
                 <h2>
-                    <span style="transform:matrix(1,0,0,1,0,0);">Front-end Developer</span>
+                    <span style="transform:matrix(1,0,0,1,0,0);">Front-end Developer </br> UX/UI Designer</span>
                 </h2>
                        
             </div>
@@ -128,6 +128,15 @@
                             </div>
                             <div class="img_logo_skills -sass">
                                 <img src="images/sass-white.png" alt="html-image" class="img-responsive">
+                            </div>
+                            <div class="img_logo_skills -sass">
+                                <img src="images/pug-logo.png" alt="html-image" class="img-responsive">
+                            </div>
+                            <div class="img_logo_skills -sass">
+                                <img src="images/github_white.png" alt="html-image" class="img-responsive">
+                            </div>
+                            <div class="img_logo_skills">
+                                <img src="images/gulp-white.png" alt="html-image" class="img-responsive" width="40px">
                             </div>     
                         </div>         
                     </div>  
