--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <span style="transform:matrix(1,0,0,1,0,0);" class="title">Grace Clavijo</span>
                 </h1>
                 <h2>
-                    <span style="transform:matrix(1,0,0,1,0,0);">Front-end Developer </br> UX/UI Designer</span>
+                    <span style="transform:matrix(1,0,0,1,0,0);">UX/UI Designer</span>
                 </h2>
                        
             </div>
