--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
                             </div>
                             <div class="img_logo_skills">
                                 <img src="images/gulp-white.png" alt="html-image" class="img-responsive" width="40px">
-                            </div>     
+                            </div> 
+                            
                         </div>         
                     </div>  
                </div>
@@ -146,11 +147,25 @@
             <div class="row text-left languages_skills -skills">
                     <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
                         <div class="idiomas_skills text-center">
+                            <div class="img_logo_skills">
+                                <span style="margin-bottom: 10px;">Adobe XD</span><img src="images/2000px-Adobe_XD_CC_icon.svg.png" alt="html-image" class="img-responsive">
+                            </div>
+                            <div class="img_logo_skills">
+                                    <span style="padding-bottom: 10px;">Figma</span><img src="images/figma-logo.png" alt="html-image" class="img-responsive">
+                            </div>
+                            <div class="img_logo_skills">
+                                    <span style="padding-bottom: 10px;">Sketch</span><img src="images/sketch.png" alt="html-image" class="img-responsive">
+                            </div>
+                            <div class="img_logo_skills">
+                                    <span style="padding-bottom: 10px;">Invision</span><img src="images/invision-logo-png-transparent.png" alt="html-image" class="img-responsive">
+                            </div>
+
+
                            <h3 id="name">Idiomas</h3>
                             <div><span>Inglés Avanzado</span><img src="images/statue_1.png" alt="" class="img-responsive"> </div>
                             <div> <span>Mandarín Intermedio <img src="images/mandarin-2.1.png" alt="" class="img-responsive"></span></div>
                             <div><span>Japones <br>Básico <img src="images/jp-3.png" alt="" class="img-responsive"></span></div>
-                            <div> <span>Portugués Básico<img src="images/br-4.png" alt="" class="img-responsive"></span></div>
+                            
                         </div> 
                     </div>  
             </div>
